# RLbird

./: .gitignore  README.md  dqn_flappy.pt  dqn_flappy_long.pt  dqn_flappy_m1_v2.pt  dqn_flappy_m1_v2_checkpoint.pt  dqn_flappy_m1_v3.pt  pyproject.toml
flappy_rl_tutorial/: README.md  dqn_flappy_m1_good.pt
flappy_rl_tutorial/src/flappy_rl_tutorial/: __init__.py  env.py
src/flappy_rl_tutorial/: model.py  play.py  train.py
